lexer/.antlr/PHPParser.java
// Generated from c:/Users/juand/OneDrive/Documentos/GitHub/Proyecto-con-PHP/lexer/PHPParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PHPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PHP_OPEN=1, PHP_CLOSE=2, IF=3, ELSE=4, ELSEIF=5, SWITCH=6, CASE=7, DEFAULT=8, 
		BREAK=9, MATCH=10, WHILE=11, FOR=12, FOREACH=13, DO=14, CONTINUE=15, FUNCTION=16, 
		RETURN=17, CLASS=18, NEW=19, EXTENDS=20, IMPLEMENTS=21, INTERFACE=22, 
		TRAIT=23, NAMESPACE=24, USE=25, PUBLIC=26, PRIVATE=27, PROTECTED=28, STATIC=29, 
		CONST=30, FINAL=31, ABSTRACT=32, TRY=33, CATCH=34, FINALLY=35, THROW=36, 
		INCLUDE=37, REQUIRE=38, INCLUDE_ONCE=39, REQUIRE_ONCE=40, ECHO=41, PRINT=42, 
		TRUE=43, FALSE=44, NULL=45, ARRAY=46, LIST=47, GLOBAL=48, ISSET=49, UNSET=50, 
		EMPTY=51, INSTANCEOF=52, AND_WORD=53, OR_WORD=54, XOR_WORD=55, VARIABLE=56, 
		ID=57, INT_HEX=58, INT_BIN=59, INT_OCT=60, FLOAT=61, INT=62, STRING=63, 
		STRING_SQ=64, POWER_ASSIGN=65, NULL_COALESCE_ASSIGN=66, IDENTICAL=67, 
		NOT_IDENTICAL=68, SPACESHIP=69, ADD_ASSIGN=70, SUB_ASSIGN=71, MUL_ASSIGN=72, 
		DIV_ASSIGN=73, MOD_ASSIGN=74, CONCAT_ASSIGN=75, AND_ASSIGN=76, OR_ASSIGN=77, 
		XOR_ASSIGN=78, LSHIFT_ASSIGN=79, RSHIFT_ASSIGN=80, POWER=81, INCREMENT=82, 
		DECREMENT=83, EQUAL=84, NOT_EQUAL=85, LTE=86, GTE=87, AND=88, OR=89, LSHIFT=90, 
		RSHIFT=91, ARROW=92, DOUBLE_ARROW=93, DOUBLE_COLON=94, NULL_COALESCE=95, 
		ELLIPSIS=96, PLUS=97, MINUS=98, MUL=99, DIV=100, MOD=101, LT=102, GT=103, 
		ASSIGN=104, NOT=105, BIT_AND=106, BIT_OR=107, BIT_XOR=108, BIT_NOT=109, 
		CONCAT=110, QUESTION=111, COLON=112, AT=113, BACKSLASH=114, LPAREN=115, 
		RPAREN=116, LBRACE=117, RBRACE=118, LBRACKET=119, RBRACKET=120, SEMICOLON=121, 
		COMMA=122, LINE_COMMENT=123, HASH_COMMENT=124, BLOCK_COMMENT=125, WS=126, 
		ERROR_CHAR=127;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_blockStatement = 2, RULE_ifStatement = 3, 
		RULE_whileStatement = 4, RULE_forStatement = 5, RULE_echoStatement = 6, 
		RULE_echoList = 7, RULE_returnStatement = 8, RULE_expressionStatement = 9, 
		RULE_primary = 10, RULE_literal = 11, RULE_functionCall = 12, RULE_argumentList = 13, 
		RULE_unaryExpr = 14, RULE_multiplicativeExpr = 15, RULE_additiveExpr = 16, 
		RULE_powerExpr = 17, RULE_comparisonExpr = 18, RULE_logicalExpr = 19, 
		RULE_logicalWordExpr = 20, RULE_assignmentExpr = 21, RULE_assignmentOperator = 22, 
		RULE_expr = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "blockStatement", "ifStatement", "whileStatement", 
			"forStatement", "echoStatement", "echoList", "returnStatement", "expressionStatement", 
			"primary", "literal", "functionCall", "argumentList", "unaryExpr", "multiplicativeExpr", 
			"additiveExpr", "powerExpr", "comparisonExpr", "logicalExpr", "logicalWordExpr", 
			"assignmentExpr", "assignmentOperator", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<?php'", "'?>'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'**='", "'??='", "'==='", "'!=='", 
			"'<=>'", "'+='", "'-='", "'*='", "'/='", "'%='", "'.='", "'&='", "'|='", 
			"'^='", "'<<='", "'>>='", "'**'", "'++'", "'--'", "'=='", "'!='", "'<='", 
			"'>='", "'&&'", "'||'", "'<<'", "'>>'", "'->'", "'=>'", "'::'", "'??'", 
			"'...'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'='", "'!'", 
			"'&'", "'|'", "'^'", "'~'", "'.'", "'?'", "':'", "'@'", "'\\'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PHP_OPEN", "PHP_CLOSE", "IF", "ELSE", "ELSEIF", "SWITCH", "CASE", 
			"DEFAULT", "BREAK", "MATCH", "WHILE", "FOR", "FOREACH", "DO", "CONTINUE", 
			"FUNCTION", "RETURN", "CLASS", "NEW", "EXTENDS", "IMPLEMENTS", "INTERFACE", 
			"TRAIT", "NAMESPACE", "USE", "PUBLIC", "PRIVATE", "PROTECTED", "STATIC", 
			"CONST", "FINAL", "ABSTRACT", "TRY", "CATCH", "FINALLY", "THROW", "INCLUDE", 
			"REQUIRE", "INCLUDE_ONCE", "REQUIRE_ONCE", "ECHO", "PRINT", "TRUE", "FALSE", 
			"NULL", "ARRAY", "LIST", "GLOBAL", "ISSET", "UNSET", "EMPTY", "INSTANCEOF", 
			"AND_WORD", "OR_WORD", "XOR_WORD", "VARIABLE", "ID", "INT_HEX", "INT_BIN", 
			"INT_OCT", "FLOAT", "INT", "STRING", "STRING_SQ", "POWER_ASSIGN", "NULL_COALESCE_ASSIGN", 
			"IDENTICAL", "NOT_IDENTICAL", "SPACESHIP", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "CONCAT_ASSIGN", "AND_ASSIGN", 
			"OR_ASSIGN", "XOR_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "POWER", 
			"INCREMENT", "DECREMENT", "EQUAL", "NOT_EQUAL", "LTE", "GTE", "AND", 
			"OR", "LSHIFT", "RSHIFT", "ARROW", "DOUBLE_ARROW", "DOUBLE_COLON", "NULL_COALESCE", 
			"ELLIPSIS", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LT", "GT", "ASSIGN", 
			"NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_NOT", "CONCAT", "QUESTION", 
			"COLON", "AT", "BACKSLASH", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
			"RBRACKET", "SEMICOLON", "COMMA", "LINE_COMMENT", "HASH_COMMENT", "BLOCK_COMMENT", 
			"WS", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PHPParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PHPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PHP_OPEN() { return getToken(PHPParser.PHP_OPEN, 0); }
		public TerminalNode EOF() { return getToken(PHPParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode PHP_CLOSE() { return getToken(PHPParser.PHP_CLOSE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(PHP_OPEN);
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -72055395014535160L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 11261223862272001L) != 0)) {
				{
				{
				setState(49);
				statement();
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PHP_CLOSE) {
				{
				setState(55);
				match(PHP_CLOSE);
				}
			}

			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BlockStatementContext blockStatement() {
			return getRuleContext(BlockStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public EchoStatementContext echoStatement() {
			return getRuleContext(EchoStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
			case ID:
			case INT_HEX:
			case INT_BIN:
			case INT_OCT:
			case FLOAT:
			case INT:
			case STRING:
			case STRING_SQ:
			case INCREMENT:
			case DECREMENT:
			case PLUS:
			case MINUS:
			case NOT:
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				expressionStatement();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				ifStatement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				whileStatement();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				returnStatement();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 5);
				{
				setState(64);
				blockStatement();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(65);
				forStatement();
				}
				break;
			case ECHO:
				enterOuterAlt(_localctx, 7);
				{
				setState(66);
				echoStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockStatementContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(PHPParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PHPParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatement; }
	}

	public final BlockStatementContext blockStatement() throws RecognitionException {
		BlockStatementContext _localctx = new BlockStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blockStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(LBRACE);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -72055395014535160L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 11261223862272001L) != 0)) {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PHPParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(PHPParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PHPParser.RPAREN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PHPParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(IF);
			setState(79);
			match(LPAREN);
			setState(80);
			expr();
			setState(81);
			match(RPAREN);
			setState(82);
			statement();
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(83);
				match(ELSE);
				setState(84);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(PHPParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(PHPParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PHPParser.RPAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(WHILE);
			setState(88);
			match(LPAREN);
			setState(89);
			expr();
			setState(90);
			match(RPAREN);
			setState(91);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStatementContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(PHPParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(PHPParser.LPAREN, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(PHPParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PHPParser.SEMICOLON, i);
		}
		public TerminalNode RPAREN() { return getToken(PHPParser.RPAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStatement; }
	}

	public final ForStatementContext forStatement() throws RecognitionException {
		ForStatementContext _localctx = new ForStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(FOR);
			setState(94);
			match(LPAREN);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & 577030299527938559L) != 0)) {
				{
				setState(95);
				expr();
				}
			}

			setState(98);
			match(SEMICOLON);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & 577030299527938559L) != 0)) {
				{
				setState(99);
				expr();
				}
			}

			setState(102);
			match(SEMICOLON);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & 577030299527938559L) != 0)) {
				{
				setState(103);
				expr();
				}
			}

			setState(106);
			match(RPAREN);
			setState(107);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EchoStatementContext extends ParserRuleContext {
		public TerminalNode ECHO() { return getToken(PHPParser.ECHO, 0); }
		public EchoListContext echoList() {
			return getRuleContext(EchoListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PHPParser.SEMICOLON, 0); }
		public EchoStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_echoStatement; }
	}

	public final EchoStatementContext echoStatement() throws RecognitionException {
		EchoStatementContext _localctx = new EchoStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_echoStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ECHO);
			setState(110);
			echoList();
			setState(111);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EchoListContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> CONCAT() { return getTokens(PHPParser.CONCAT); }
		public TerminalNode CONCAT(int i) {
			return getToken(PHPParser.CONCAT, i);
		}
		public EchoListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_echoList; }
	}

	public final EchoListContext echoList() throws RecognitionException {
		EchoListContext _localctx = new EchoListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_echoList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			expr();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CONCAT) {
				{
				{
				setState(114);
				match(CONCAT);
				setState(115);
				expr();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(PHPParser.RETURN, 0); }
		public TerminalNode SEMICOLON() { return getToken(PHPParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(RETURN);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & 577030299527938559L) != 0)) {
				{
				setState(122);
				expr();
				}
			}

			setState(125);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStatementContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PHPParser.SEMICOLON, 0); }
		public ExpressionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStatement; }
	}

	public final ExpressionStatementContext expressionStatement() throws RecognitionException {
		ExpressionStatementContext _localctx = new ExpressionStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expressionStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			expr();
			setState(128);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(PHPParser.VARIABLE, 0); }
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PHPParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PHPParser.RPAREN, 0); }
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_primary);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(VARIABLE);
				}
				break;
			case INT_HEX:
			case INT_BIN:
			case INT_OCT:
			case FLOAT:
			case INT:
			case STRING:
			case STRING_SQ:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				literal();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				functionCall();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				match(LPAREN);
				setState(134);
				expr();
				setState(135);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PHPParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(PHPParser.FLOAT, 0); }
		public TerminalNode INT_HEX() { return getToken(PHPParser.INT_HEX, 0); }
		public TerminalNode INT_BIN() { return getToken(PHPParser.INT_BIN, 0); }
		public TerminalNode INT_OCT() { return getToken(PHPParser.INT_OCT, 0); }
		public TerminalNode STRING() { return getToken(PHPParser.STRING, 0); }
		public TerminalNode STRING_SQ() { return getToken(PHPParser.STRING_SQ, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ( !(((((_la - 58)) & ~0x3f) == 0 && ((1L << (_la - 58)) & 127L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PHPParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(PHPParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PHPParser.RPAREN, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(142);
			match(LPAREN);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & 577030299527938559L) != 0)) {
				{
				setState(143);
				argumentList();
				}
			}

			setState(146);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
